# Password_manager_CPP

./: .gitignore  CMakeLists.txt  README.md  categories.json  main.cpp  plikTestowy.txt  questions.txt  test.txt
Features/EncryptPassword/: encryptPassword.cpp  encryptPassword.h
Features/Log in/: login.cpp  login.h
Menu/Design/: menu.cpp  menu.h
Menu/Dodaj/: addPasswd.cpp  addPasswd.h  addPassword.cpp  addPassword.h  dodaj.cpp  dodaj.h
Menu/DodajKat/: addCategory.cpp  addCategory.h
Menu/Edytuj/: edit.cpp  edit.h
Menu/FilePath/: filePath.cpp  filePath.h
Menu/Posortuj/: sort.cpp  sort.h
Menu/Usun/: deletePasswd.cpp  deletePasswd.h  deletePassword.cpp  deletePassword.h
Menu/UsunKat/: deleteCategory.cpp  deleteCategory.h
Menu/Wyszukaj/: searchingPassword.cpp  searchingPassword.h  wyszukaj.cpp  wyszukaj.h
Utils/Auth/: auth.cpp  auth.h
Utils/DecryptPassword/: decryptPassword.cpp  decryptPassword.h
Utils/Decrypting/: decrypt.cpp  decrypt.h
Utils/EncryptPassword/: encryptPassword.cpp  encryptPassword.h
Utils/Encrypting/: encrypt.cpp  encrypt.h
Utils/FileVectorConverter/: converter.cpp  converter.h
Utils/Seed/: seed.cpp  seed.h
Utils/StringConverter/: strconverter.cpp  strconverter.h
Utils/Timestamp/: timestamp.cpp  timestamp.h
